"""
Tenant Parser gRPC Client
Handles intent classification and confidence scoring
"""
import grpc
import logging
from typing import Dict, Any, Optional

logger = logging.getLogger(__name__)

class TenantParserClient:
    """Client for tenant parser service communication"""
    
    def __init__(self, host: str = "tenant_parser", port: int = 5012):
        self.endpoint = f"{host}:{port}"
        logger.info(f"Initialized TenantParserClient with endpoint: {self.endpoint}")
    
    async def classify_intent(
        self, 
        query: str, 
        tenant_id: str, 
        session_id: Optional[str] = None
    ) -> Dict[str, Any]:
        """
        Call tenant parser for intent classification and confidence scoring
        """
        try:
            # TODO: Implement actual gRPC call to tenant parser
            # For now, return mock response structure
            logger.info(f"Calling tenant parser: {query[:30]}...")
            
            # Mock response - replace with actual gRPC call
            return {
                "intent": "customer_inquiry",
                "confidence": 0.75,
                "tenant_id": tenant_id,
                "session_id": session_id,
                "enhanced_query": query
            }
            
        except Exception as e:
            logger.error(f"Tenant parser call failed: {str(e)}")
            return {
                "intent": "general_inquiry", 
                "confidence": 0.5,
                "error": str(e)
            }
